# telegram-transcription-audio

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml
.streamlit/: config.toml
docs/plans/: 2025-12-11-streamlit-web-ui.md  2025-12-12-portfolio-ready.md
mockups/: mockup.html
telegram_voice_transcriber/: __init__.py  async_helpers.py  cli.py  config.py  download.py  dry_run.py  export_md.py  filters.py  models.py  pipeline.py  state.py  tg_client.py  transcribe.py  web.py  web_auth.py  writer.py
tests/: test_async_helpers.py  test_cli.py  test_config.py  test_download.py  test_dry_run.py  test_filters.py  test_markdown_export.py  test_message_type.py  test_pipeline.py  test_state.py  test_tg_client.py  test_transcriber.py  test_web_auth.py
